# stock-price-predictor

./: .gitignore  LICENSE  Makefile  README.md  feature_transformer.pkl  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy-ecs.yml
configs/: serving.yaml  train.aws.yaml  train.yaml
configs/quick/: automl.yaml  hf.yaml  ridge.yaml  transformer.yaml
docker/: .dockerignore  Dockerfile
infra/ecs/: task-definition.json
infra/terraform/envs/dev/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
payloads/: ohlcv_11.json  ohlcv_64.json
scripts/: promote_model.sh  quick_test_all.sh  set_alias.py  train_and_register.sh
src/: __init__.py
src/data/: features.py  load_hf.py
src/models/: automl_flaml.py  common.py  hf_finetune.py  ridge.py  transformer_custom.py
src/serving/: app.py
src/training/: dispatch.py  evaluate.py  registry.py  train.py
tests/: test_health.py
